--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "bootstrap": "3.4.1",
     "jquery": "3.4.1",
     "jquery-ujs": "^1.2.3",
+    "rails-ujs": "^5.2.6",
+    "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
