--- a/config/settings.yml
+++ b/config/settings.yml
@@ -10,4 +10,8 @@ max_name_length: 30
 avatar_size: 50
 avatar_size_l: 80
 user_per_page: 10
+microposts_per_page: 5
 expired_password_time: 2
+micropost_length: 140
+max_image_size: 5
+limit_size: [500, 500]
