--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,6 +7,7 @@ email_regex: !ruby/regexp /\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i
 max_email_length: 255
 min_password_length: 6
 max_name_length: 30
+avatar_size_s: 30
 avatar_size: 50
 avatar_size_l: 80
 user_per_page: 10
