--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@
 /config/master.key
 /config/credentials.yml.enc
 /config/database.yml
+.framgia-ci-reports/
+.framgia-ci-result.temp.yml
+/test/
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
